# miscellaneous

./: README.md
angr-scripts/: basic.py  step-exploration-with-hooks.py  verbose-logging.py
binary-ninja/: README.md
binary-ninja/analysis/: README.md  cff-analysis.py
binary-ninja/arch-hook/: custom-hook.py
binary-ninja/workflows/: README.md
binary-ninja/workflows/control-flow-flattening/: cff_unflatten.py  patch.py  patches.json
binary-ninja/workflows/control-flow-flattening/example/: source.out
binary-ninja/workflows/control-flow-patch/: CMakeLists.txt  controlflowpatch.cpp
emulation/: qiling-hooking.py
encryption-algos/: xtea-decrypt.py
ida-scripts/: README.md  apply_api_by_name.py  create_struct.py  dynamic_api_resolution.py
radius2-playground/greyctf-crackme2/: Cargo.toml
radius2-playground/greyctf-crackme2/src/: main.rs
radius2-playground/ida-challenge/: Cargo.toml
radius2-playground/ida-challenge/src/: main.rs
